mb_palpay/styles/style.css
/* 
Generic Styling, for Desktops/Laptops 
*/
 table { 
  width: 100%; 
  border-collapse: collapse; 
}
/* Zebra striping */
 tr:nth-of-type(odd) { 
  background: #D795B1; 
}
 th { 
  background: #333; 
  color: white; 
  font-weight: bold; 
}
 td, th { 
  padding: 6px; 
  border: 1px solid #ccc; 
  text-align: left; 
}




@media 
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px)  {

	/* Force table to not be like tables anymore */
	#balanceInquiry  table, #balanceInquiry thead, #balanceInquiry tbody, #balanceInquiry th,#balanceInquiry  td,#balanceInquiry tr { 
		display: block; 
	}
	
	/* Hide table headers (but not display: none;, for accessibility) */
	#balanceInquiry  thead tr { 
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
	
	#balanceInquiry tr { border: 1px solid #ccc; }
	
	#balanceInquiry td { 
		/* Behave  like a "row" */
		border: none;
		border-bottom: 1px solid #eee; 
		position: relative;
		padding-left: 50%; 
	}
	
	#balanceInquiry td:before { 
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 6px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
	}
	
	/*
	Label the data
	*/
	
    #balanceInquiry td:nth-of-type(1):before { content: "Account Number"; }
	#balanceInquiry td:nth-of-type(2):before { content: "IBAN/BBAN "; }
    #balanceInquiry td:nth-of-type(3):before { content: "Type"; }
	#balanceInquiry td:nth-of-type(4):before { content: "Balance"; }
    
  /*  td:nth-of-type(1):before { content: "Transaction Date"; }
    td:nth-of-type(2):before { content: "Explanation"; }
    td:nth-of-type(3):before { content: "Amount"; }*/
	
}









body {
   
}


/*
table{
    border:1px solid black;
    width:100%;
    border-collapse:collapse;
    
}   
th{
    height:50px;
}

td,th{
    border:1px solid black;
    text-align:left;
    padding:5px;
} */

#logoContainer{
     background-color:#664455;
    background-repeat: no-repeat;
    text-align: center;
    width: 320px;
    height: 193px;
    margin: 0px auto;
   
    }



/*
km-android .km-navbar .km-view-title 
{
    display: inline-block;
  visibility: visible;
}

.km-android .km-navbar .km-view-title 
{
    
}
*/






	

